<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_files"
            android:icon="@drawable/ic_menu_my_files"
            android:title="@string/menu_my_files" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_menu_recent"
            android:title="@string/menu_recent" />
        <item
            android:id="@+id/nav_shared"
            android:icon="@drawable/ic_menu_shared"
            android:title="@string/menu_shared" />
        <item
            android:id="@+id/nav_starred"
            android:icon="@drawable/ic_menu_starred"
            android:title="@string/menu_starred" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_categories"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_menu_trash"
            android:title="@string/menu_trash" />
    </group>

</menu>