<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_onPrimary"
    android:orientation="vertical">

    <!-- 头部区域 -->
    <LinearLayout
        android:id="@+id/nav_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:theme="@style/AppTheme"
        tools:ignore="UseCompoundDrawables,UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@android:color/transparent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/portrait"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/image2" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_subtitle" />
        </LinearLayout>
    </LinearLayout>

    <!-- 分割线 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_theme_outlineVariant" />

    <!-- 菜单项列表 -->

    <!-- 分割线 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/menuRecycleView"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_theme_outlineVariant" />

    <!-- 底部区域 -->
    <LinearLayout
        android:id="@+id/nav_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <!-- 存储信息卡片 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:background="@drawable/bg_card_rounded"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@android:color/transparent">
                    <!--  图片  -->
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:background="#eef6ff"
                        android:src="@drawable/ic_cloud_storage"
                        app:tint="#165dfb" />
                </androidx.cardview.widget.CardView>

                <!--  存储空间文字  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/storage_used_title"
                        android:textColor="@color/md_theme_secondary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_storage_usage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.06 GB of 15 GB"
                        android:textColor="@color/md_theme_onSurface"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_weight="1">

                <ProgressBar
                    android:id="@+id/RatingProgressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_gravity="bottom"
                    android:max="100"
                    android:progress="86"
                    android:progressDrawable="@drawable/rating_progress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_storage_percent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="0.4% used"
                    android:textColor="@color/md_theme_onSurfaceVariant"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- 上传按钮 -->
        <Button
            android:id="@+id/btn_upload_files"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/upload_files"
            android:textColor="#ffffff"
            android:textSize="16sp"
            app:iconGravity="start" />
    </LinearLayout>
</LinearLayout>